[gd_scene load_steps=5 format=3 uid="uid://dv5stwpnqci5q"]

[ext_resource type="Script" path="res://objects/water_zone.gd" id="1_qocwf"]
[ext_resource type="Material" uid="uid://be30wtjq8i8m6" path="res://materials/environment/water0.tres" id="2_jetq0"]

[sub_resource type="BoxShape3D" id="BoxShape3D_6q7k2"]
size = Vector3(10, 10, 10)

[sub_resource type="PlaneMesh" id="PlaneMesh_eh1fy"]
material = ExtResource("2_jetq0")
size = Vector2(10, 10)
subdivide_width = 32
subdivide_depth = 32

[node name="WaterZone" type="Area3D"]
script = ExtResource("1_qocwf")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5, 0)
shape = SubResource("BoxShape3D_6q7k2")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.103779, 0)
mesh = SubResource("PlaneMesh_eh1fy")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, 0, -0.103779, 0)
mesh = SubResource("PlaneMesh_eh1fy")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
